# dddesign

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  fabfile.py  mypy.toml  pyproject.toml  requirements.dev.txt  ruff.toml
.github/actions/: linters.yml
.github/actions/linters/: action.yml
.github/actions/setup_python_and_poetry/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: linters.yml  publish_python_package.yml  quality_assurance.yml  tests.yml
dddesign/: __init__.py
dddesign/components/: __init__.py
dddesign/components/domains/: __init__.py
dddesign/structure/: __init__.py
dddesign/structure/applications/: __init__.py  application.py  application_factory.py
dddesign/structure/domains/: __init__.py
dddesign/structure/infrastructure/: __init__.py
dddesign/structure/services/: service.py
dddesign/types/: __init__.py  email_str.py  string_uuid.py
dddesign/unittest/: __init__.py  magic_mock.py
dddesign/utils/: __init__.py  annotation_helpers.py  base_modal_error_wrapper.py  class_helpers.py  convertors.py  function_exceptions_extractor.py  function_helpers.py  module_getter.py  safe_decorators.py  sequence_helpers.py  type_helpers.py
dddesign/utils/base_model/: __init__.py  changes_tracker.py  error_factory.py  error_instance_factory.py  error_wrapper.py  flatten_model_dump.py
tests/structure/applications/: test_application.py
tests/structure/services/: test_service.py
tests/structure/validators/: __init__.py  arbitrary_types_allowed_validator.py  assignment_validator.py  immutable_validator.py
tests/types/: test_email_str.py  test_string_uuid.py
tests/utils/: test_class_helpers.py  test_convertors.py  test_function_helpers.py  test_module_getter.py  test_squence_helpers.py
tests/utils/annotation_helpers/: constants.py  test_get_annotation_origin.py  test_get_annotation_without_optional.py  test_get_complex_sequence_element_annotation.py  test_get_dict_items_annotation.py  test_is_complex_sequence.py  test_is_subclass.py
tests/utils/base_model/: test_changes_tracker.py  test_error_instance_factory.py  test_error_wrapper.py  (+1 more)
(+53 files in other folders)
