[tool.poetry]
name = "dddesign"
description = "Domain Driven Design Library"
version = "0.0.1"
authors = ["davyddd"]
readme = "README.md"
packages = [{include = "dddesign"}]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "1.10.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
