[tool.poetry]
name = "dddesign"
description = "Domain Driven Design Library"
version = "1.0.0"
authors = ["davyddd"]
license = "MIT"
repository = "https://github.com/davyddd/dddesign"
readme = "README.md"
keywords = ["python", "ddd", "domain driven design", "ddd architecture", "ddd structure", "architecture", "structure", "dddesign"]
packages = [{include = "dddesign"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
idna = "^3.7"
pydantic = {version = ">=1.9,<1.11", extras = ["email"]}

[tool.poetry.group.dev.dependencies]
ipdb = "0.13.9"
ipython = "8.12.3"

[tool.poetry.group.test.dependencies]
pytest = "8.1.1"
parameterized = "0.9.0"

[tool.poetry.group.linter.dependencies]
mypy = "1.1.1"
ruff = "0.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
