[tool.poetry]
name = "dddesign"
description = "Domain Driven Design Library"
version = "1.1.7"
authors = ["davyddd"]
license = "MIT"
repository = "https://github.com/davyddd/dddesign"
readme = "README.md"
keywords = ["python", "ddd", "domain driven design", "ddd architecture", "ddd structure", "architecture", "structure", "dddesign"]
packages = [{include = "dddesign"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
idna = "^3.7"
pydantic = ">=2.1,<2.12"
setuptools = ">=78.1.1"
ddutils = "<0.2.0"

[tool.poetry.group.dev.dependencies]
ipdb = "0.13.9"
ipython = "8.12.3"

[tool.poetry.group.test.dependencies]
pytest = "8.1.1"
pytest-cov = "5.0.0"
parameterized = "0.9.0"

[tool.poetry.group.linter.dependencies]
mypy = "1.1.1"
ruff = "0.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
